<?xml version="1.0" encoding="utf-8"?>

<!--  
TPT Helper  Copyright (C) 2011  David Phillips

This file is part of TPT Helper.

TPT Helper is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

TPT Helper is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with TPT Helper.  If not, see <http://www.gnu.org/licenses/>.
-->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/android:list"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
<LinearLayout
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <TextView
        android:text="@string/troubleshooting1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="4dp"
        android:textSize="16sp"/>
    <TextView
        android:text="@string/troubleshooting2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="4dp"
        android:textSize="16sp"/>
    <TextView
        android:text="@string/troubleshooting3"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="4dp"
        android:textSize="16sp"/>
    <TextView
        android:text="@string/troubleshooting4"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="4dp"
        android:textSize="16sp"/>
    <TextView
        android:text="@string/troubleshooting5"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="4dp"
        android:textSize="16sp"/>
    <TextView
        android:text="@string/troubleshooting6"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="4dp"
        android:textSize="16sp"/>
    <TextView
        android:text="@string/troubleshooting7"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="4dp"
        android:textSize="16sp"/>
    <TextView
        android:text="@string/troubleshooting8"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="4dp"
        android:textSize="16sp"/>
    <TextView
        android:text="@string/troubleshooting9"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="4dp"
        android:textSize="16sp"/>
    <TextView
        android:text="@string/troubleshooting10"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="4dp"
        android:textSize="16sp"/>
    <TextView
        android:text="@string/troubleshooting11"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="4dp"
        android:textSize="16sp"/>
</LinearLayout>
</ScrollView>
