<?xml version="1.0" encoding="utf-8"?>

<!--  
TPT Helper  Copyright (C) 2011  David Phillips

This file is part of TPT Helper.

TPT Helper is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

TPT Helper is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with TPT Helper.  If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
<ScrollView
    android:id="@+id/scrollinstructions"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1">
<LinearLayout
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <TextView
        android:text="@string/instruction1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="4dp"
        android:textSize="16sp"/>
    <TextView
        android:text="@string/instruction2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="4dp"
        android:textSize="16sp"/>
    <TextView
        android:text="@string/instruction3"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="4dp"
        android:textSize="16sp"/>
    <TextView
        android:text="@string/instruction4"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="4dp"
        android:textSize="16sp"/>
    <TextView
        android:text="@string/instruction5"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="4dp"
        android:textSize="16sp"/>
    <TextView
        android:text="@string/instruction6"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="4dp"
        android:textSize="16sp"/>
    <TextView
        android:text="@string/instruction7"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="4dp"
        android:textSize="16sp"/>
    <TextView
        android:text="@string/instruction8"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="4dp"
        android:textSize="16sp"/>
    <TextView
        android:text="@string/instruction9"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="4dp"
        android:textSize="16sp"/>
    <TextView
        android:text="@string/instruction10"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="4dp"
        android:textSize="16sp"/>
    <TextView
        android:text="@string/instruction11"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="4dp"
        android:textSize="16sp"/>
</LinearLayout>
</ScrollView>
</LinearLayout>