<?xml version="1.0" encoding="utf-8"?>

<!--  
TPT Helper  Copyright (C) 2011  David Phillips

This file is part of TPT Helper.

TPT Helper is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

TPT Helper is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with TPT Helper.  If not, see <http://www.gnu.org/licenses/>.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Options">
    <ListPreference
        android:enabled="true"
        android:entries="@array/model"
        android:dialogTitle="@string/phone_type_heading"
        android:key="model"
        android:selectable="true"
        android:title="@string/check_board_heading"
        android:entryValues="@array/models"
        android:persistent="true"/>
    <ListPreference
        android:enabled="true"
        android:entryValues="@array/gens"
        android:dialogTitle="@string/check_gen_heading"
        android:entries="@array/gen"
        android:selectable="true"
        android:key="gens"
        android:persistent="true"
        android:title="@string/gen_title"/>
    <ListPreference
        android:enabled="true"
        android:entryValues="@array/types"
        android:dialogTitle="@string/manual_type_heading"
        android:entries="@array/type"
        android:selectable="true"
        android:key="types"
        android:persistent="true"
        android:title="@string/type_title"/>
    <ListPreference
        android:enabled="true"
        android:entryValues="@array/blade2s"
        android:dialogTitle="@string/phone_type_heading"
        android:entries="@array/blade2"
        android:selectable="true"
        android:title="@string/check_board_heading"
        android:key="blade2"
        android:persistent="true"/>
</PreferenceScreen>
